[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line tool to generate, analyze, convert and manipulate colors"
homepage = "https://github.com/sharkdp/pastel"
license = "MIT/Apache-2.0"
name = "pastel"
readme = "README.md"
repository = "https://github.com/sharkdp/pastel"
version = "0.9.0"
edition = "2021"
build = "build.rs"
exclude = ["doc/pastel.gif"]

[dependencies]
# library dependencies
atty = "0.2"
nom = "7.0.0"
once_cell = "1.18.0"
output_vt100 = "0.1"
rand = "0.8"

# binary-only dependencies (see https://github.com/rust-lang/cargo/issues/1982)
regex = "1.5"

[dependencies.clap]
version = "3"
features = ["suggestions", "color", "wrap_help", "cargo"]

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
once_cell = "1.18.0"
output_vt100 = "0.1"

[[bin]]
name = "pastel"
path = "src/cli/main.rs"


[dev-dependencies]
approx = "0.5.0"
assert_cmd = "2.0.0"
rand_xoshiro = "0.6.0"
criterion = "0.4"

[[bench]]
name = "parse_color"
harness = false
