[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line tool to generate, analyze, convert and manipulate colors"
homepage = "https://github.com/sharkdp/pastel"
license = "MIT/Apache-2.0"
name = "pastel"
readme = "README.md"
repository = "https://github.com/sharkdp/pastel"
version = "0.10.0"
edition = "2021"
build = "build.rs"
exclude = ["doc/pastel.gif"]
rust-version = "1.83.0"

[dependencies]
# library dependencies
atty = "0.2"
nom = "7.1.3"
once_cell = "1.20.2"
output_vt100 = "0.1"
rand = "0.9"

# binary-only dependencies (see https://github.com/rust-lang/cargo/issues/1982)
regex = "1.11"

[dependencies.clap]
version = "3"
features = ["suggestions", "color", "wrap_help", "cargo"]

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
once_cell = "1.20.2"
output_vt100 = "0.1"

[[bin]]
name = "pastel"
path = "src/cli/main.rs"


[dev-dependencies]
approx = "0.5.0"
assert_cmd = "2.0.13"
rand_xoshiro = "0.7.0"
criterion = "0.5"

[[bench]]
name = "parse_color"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pastel_normal_build)'] }
